2001-09-19  John Harper  <jsh@unfactored.org>

	Fixed bug of window flicker when switching workspaces:

	* sawfish/wm/workspace.jl (select-workspace): don't remove all
	windows not in the new space, then add all windows in the new
	space. Instead add all windows in the new space in
	top-to-bottom order, then remove unneeded windows
	bottom-to-top. This always generates the minimum exposed area

2001-09-17  John Harper  <jsh@unfactored.org>

	* sawfish/wm/commands.jl (apply-command-keys): fixed type of
	'dommand-doc instead of 'command-doc. Spotted by David Bustos
	<bustos@its.caltech.edu>

2001-09-14  John Harper  <jsh@pixelslut.com>

	* sawfish/wm.jl: when possible, disable error reporting on
	stdio streams

2001-09-13  John Harper  <jsh@pixelslut.com>

	Fixed bug of nautilus desktop window covering panel:

	* sawfish/wm/state/wm-spec.jl (desktop-layer, dock-layer): set
	to -/+ 4 respectively, not -/+ 1(which are the actual values
	used in the GNOME 1 spec)

2001-09-02  John Harper  <jsh@pixelslut.com>

	Fixed 6693 (restarting sawfish with a maximized window and the
	gnome panel will make the maximized window too big):

	* ~/src/sawfish/lisp/sawfish/wm/state/maximize.jl
	(property-notify): don't install check-if-maximizable into the
	add-window-hook immediately. Instead use
	after-initialization-hook to run c-i-m over all windows, then
	install it as before

2001-08-31  John Harper  <jsh@pixelslut.com>

	* ~/src/sawfish/lisp/sawfish/wm/util/stacking.jl
	(maybe-raise-window, maybe-lower-window): when adding server
	timestamp to the client message, subtract one from the actual
	last seen timestamp. Done for same reason as in windows.c

	* ~/src/sawfish/lisp/sawfish/wm/util/display-window.jl
	(display-window-without-focusing): new (private) keyword
	parameter WILL-REFOCUS. Pass this value along to
	select-workspace

	(display-window): pass WILL-REFOCUS as true when we'll be
	focusing a window afterwards (helps avoid some race conditions)
