@@ -1,3 +1,8 @@
+2001-09-20  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/workspace.jl (select-workspace): fixed bug in last
+	change, don't keep the server grabbed for so long
+
 2001-09-19  John Harper  <jsh@unfactored.org>
 
 	Fixed bug of window flicker when switching workspaces:
